fix: fix height for aboutUsWrap on about us page

--- a/src/app/(home)/aboutUs/aboutUs.module.scss
+++ b/src/app/(home)/aboutUs/aboutUs.module.scss
@@ -13,15 +13,15 @@
 	}
 
 	@media (max-width: 1024px) {
-		height: calc(100vh - 139px);
+		height: calc(100vh - 136px);
 	}
 
 	@media (max-width: 768px) {
-		height: calc(100vh - 131px);
+		height: calc(100vh - 128px);
 	}
 
 	@media (max-width: 490px) {
-		height: calc(100vh - 89px);
+		height: calc(100vh - 86px);
 	}
 }
 
